responsive css changes to main section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Instagram</title>
     <link rel="stylesheet" href="instagram-starter-code/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   </head>
   <body>
     <span>
@@ -89,7 +90,7 @@
     <li><a href=#>Directory</a></li>
     <li><a href=#>Profiles</a></li>
     <li><a href=#>Hashtags</a></li>
-    <li><a href=#>Languages</a></li>
+    <li><a href=#>Languages</a></li><br class=line_break>
     <li class="copyright">&copy 2018 Instagram</li>
   </ul>
 </footer>
